# DjangoShop

./: .env-example  .gitignore  README.md  manage.py  pyproject.toml
carts/: urls.py
groceries/: admin.py  apps.py  models.py  serializers.py  views.py
groceries/migrations/: 0001_initial.py  0002_alter_grocery_photo_delete_groceryphoto.py
grocery_shop/: asgi.py  settings.py  urls.py  wsgi.py
grocery_shop/grocery_shop/: settings.py  urls.py
